--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇳🇱 荷兰-3.37MB/s(Youtube:不良林), server: 213.183.59.218, port: 9097, type: ss, cipher: aes-256-cfb, password: Sn5B7jTqr76aCJT8}
-  - {name: 🇺🇸 美国-3.24MB/s(Youtube:不良林), server: 38.68.135.19, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 阿联酋-1.22MB/s(Youtube:不良林), server: 217.138.193.6, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-4.62MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-1.54MB/s(Youtube:不良林), server: 213.183.59.185, port: 9032, type: ss, cipher: aes-256-cfb, password: UWZQeLRWnkqgkseq}
-  - {name: 🇺🇸 美国-13.17MB/s(Youtube:不良林), server: hk02.bosaidong.buzz, port: 443, type: vmess, uuid: 96e19c0c-ba2f-47cf-b1d6-efef8f8fbb4d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /JJkuv3, ws-headers: {Host: hk02.bosaidong.buzz}}
-  - {name: 🇺🇸 美国-2.71MB/s(Youtube:不良林), server: hk01.bosaidong.buzz, port: 444, type: vmess, uuid: 96e19c0c-ba2f-47cf-b1d6-efef8f8fbb4d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /JJkuv3, ws-headers: {Host: hk01.bosaidong.buzz}}
-  - {name: 🇺🇸 美国-10.28MB/s(Youtube:不良林), server: 20.222.106.239, port: 80, type: vmess, uuid: 5f405152-88b2-4e5e-9091-b730e65e8983, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 20.222.106.239}}
-  - {name: 🇺🇸 美国-12.72MB/s(Youtube:不良林), server: 20.243.69.62, port: 80, type: vmess, uuid: 5f405152-88b2-4e5e-9091-b730e65e8983, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 20.243.69.62}}
-  - {name: 🇺🇸 美国-13.42MB/s(Youtube:不良林), server: 20.243.71.225, port: 80, type: vmess, uuid: 5f405152-88b2-4e5e-9091-b730e65e8983, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 20.243.71.225}}
+  - {name: 🇺🇸 美国-4.79MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-2.59MB/s(Youtube:不良林), server: 213.183.59.185, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
+  - {name: 🇳🇱 荷兰-1.08MB/s(Youtube:不良林), server: 213.183.59.185, port: 9045, type: ss, cipher: aes-256-cfb, password: Lp27rqyJq72bZsqX}
+  - {name: 波兰-1.29MB/s(Youtube:不良林), server: 217.30.10.67, port: 9015, type: ss, cipher: aes-256-cfb, password: ZpNDDKRu9MagNvaf}
+  - {name: 🇺🇸 美国-3.40MB/s(Youtube:不良林), server: 38.68.134.71, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇺🇸 美国-20.38MB/s(Youtube:不良林), server: hk02.bosaidong.buzz, port: 443, type: vmess, uuid: 96e19c0c-ba2f-47cf-b1d6-efef8f8fbb4d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /JJkuv3, ws-headers: {Host: hk02.bosaidong.buzz}}
+  - {name: 🇺🇸 美国-15.35MB/s(Youtube:不良林), server: hk01.bosaidong.buzz, port: 444, type: vmess, uuid: 96e19c0c-ba2f-47cf-b1d6-efef8f8fbb4d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /JJkuv3, ws-headers: {Host: hk01.bosaidong.buzz}}
+  - {name: 🇺🇸 美国-11.93MB/s(Youtube:不良林), server: 20.222.106.239, port: 80, type: vmess, uuid: 5f405152-88b2-4e5e-9091-b730e65e8983, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 20.222.106.239}}
+  - {name: 🇺🇸 美国-13.72MB/s(Youtube:不良林), server: 20.243.69.62, port: 80, type: vmess, uuid: 5f405152-88b2-4e5e-9091-b730e65e8983, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 20.243.69.62}}
+  - {name: 🇺🇸 美国-3.62MB/s(Youtube:不良林), server: 20.243.71.225, port: 80, type: vmess, uuid: 5f405152-88b2-4e5e-9091-b730e65e8983, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 20.243.71.225}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-3.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
-      - 阿联酋-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-13.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-12.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-13.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.79MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.59MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.08MB/s(Youtube:不良林)
+      - 波兰-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-20.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-15.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-11.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-13.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇳🇱 荷兰-3.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
-      - 阿联酋-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-13.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-12.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-13.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.79MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.59MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.08MB/s(Youtube:不良林)
+      - 波兰-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-20.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-15.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-11.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-13.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-3.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
-      - 阿联酋-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-13.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-12.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-13.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.79MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.59MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.08MB/s(Youtube:不良林)
+      - 波兰-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-20.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-15.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-11.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-13.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇳🇱 荷兰-3.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
-      - 阿联酋-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-13.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-12.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-13.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.79MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.59MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.08MB/s(Youtube:不良林)
+      - 波兰-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-20.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-15.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-11.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-13.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-3.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
-      - 阿联酋-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-13.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-12.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-13.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.79MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.59MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.08MB/s(Youtube:不良林)
+      - 波兰-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-20.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-15.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-11.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-13.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-3.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
-      - 阿联酋-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-13.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-12.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-13.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.79MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.59MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.08MB/s(Youtube:不良林)
+      - 波兰-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-20.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-15.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-11.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-13.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-3.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
-      - 阿联酋-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-13.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-12.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-13.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.79MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.59MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.08MB/s(Youtube:不良林)
+      - 波兰-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-20.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-15.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-11.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-13.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
