--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-4.79MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-2.59MB/s(Youtube:不良林), server: 213.183.59.185, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
-  - {name: 🇳🇱 荷兰-1.08MB/s(Youtube:不良林), server: 213.183.59.185, port: 9045, type: ss, cipher: aes-256-cfb, password: Lp27rqyJq72bZsqX}
-  - {name: 波兰-1.29MB/s(Youtube:不良林), server: 217.30.10.67, port: 9015, type: ss, cipher: aes-256-cfb, password: ZpNDDKRu9MagNvaf}
-  - {name: 🇺🇸 美国-3.40MB/s(Youtube:不良林), server: 38.68.134.71, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇳🇱 荷兰-1004.9KB/s(Youtube:不良林), server: 213.183.59.185, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇫🇷 法国-2.88MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇷🇺 俄罗斯联邦-2.98MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇷🇺 俄罗斯联邦-1.22MB/s(Youtube:不良林), server: 213.183.53.207, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
+  - {name: 🇺🇸 美国-3.32MB/s(Youtube:不良林), server: 38.68.134.71, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇺🇸 美国-20.38MB/s(Youtube:不良林), server: hk02.bosaidong.buzz, port: 443, type: vmess, uuid: 96e19c0c-ba2f-47cf-b1d6-efef8f8fbb4d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /JJkuv3, ws-headers: {Host: hk02.bosaidong.buzz}}
   - {name: 🇺🇸 美国-15.35MB/s(Youtube:不良林), server: hk01.bosaidong.buzz, port: 444, type: vmess, uuid: 96e19c0c-ba2f-47cf-b1d6-efef8f8fbb4d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /JJkuv3, ws-headers: {Host: hk01.bosaidong.buzz}}
   - {name: 🇺🇸 美国-11.93MB/s(Youtube:不良林), server: 20.222.106.239, port: 80, type: vmess, uuid: 5f405152-88b2-4e5e-9091-b730e65e8983, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 20.222.106.239}}
   - {name: 🇺🇸 美国-13.72MB/s(Youtube:不良林), server: 20.243.69.62, port: 80, type: vmess, uuid: 5f405152-88b2-4e5e-9091-b730e65e8983, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 20.243.69.62}}
-  - {name: 🇺🇸 美国-3.62MB/s(Youtube:不良林), server: 20.243.71.225, port: 80, type: vmess, uuid: 5f405152-88b2-4e5e-9091-b730e65e8983, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 20.243.71.225}}
+  - {name: 🇺🇸 美国-15.21MB/s(Youtube:不良林), server: 20.243.71.225, port: 80, type: vmess, uuid: 5f405152-88b2-4e5e-9091-b730e65e8983, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 20.243.71.225}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.79MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.59MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.08MB/s(Youtube:不良林)
-      - 波兰-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.40MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1004.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.88MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.98MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-20.38MB/s(Youtube:不良林)
       - 🇺🇸 美国-15.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-11.93MB/s(Youtube:不良林)
       - 🇺🇸 美国-13.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-15.21MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-4.79MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.59MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.08MB/s(Youtube:不良林)
-      - 波兰-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.40MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1004.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.88MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.98MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-20.38MB/s(Youtube:不良林)
       - 🇺🇸 美国-15.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-11.93MB/s(Youtube:不良林)
       - 🇺🇸 美国-13.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-15.21MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.79MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.59MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.08MB/s(Youtube:不良林)
-      - 波兰-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.40MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1004.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.88MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.98MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-20.38MB/s(Youtube:不良林)
       - 🇺🇸 美国-15.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-11.93MB/s(Youtube:不良林)
       - 🇺🇸 美国-13.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-15.21MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-4.79MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.59MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.08MB/s(Youtube:不良林)
-      - 波兰-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.40MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1004.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.88MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.98MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-20.38MB/s(Youtube:不良林)
       - 🇺🇸 美国-15.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-11.93MB/s(Youtube:不良林)
       - 🇺🇸 美国-13.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-15.21MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.79MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.59MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.08MB/s(Youtube:不良林)
-      - 波兰-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.40MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1004.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.88MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.98MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-20.38MB/s(Youtube:不良林)
       - 🇺🇸 美国-15.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-11.93MB/s(Youtube:不良林)
       - 🇺🇸 美国-13.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-15.21MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.79MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.59MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.08MB/s(Youtube:不良林)
-      - 波兰-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.40MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1004.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.88MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.98MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-20.38MB/s(Youtube:不良林)
       - 🇺🇸 美国-15.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-11.93MB/s(Youtube:不良林)
       - 🇺🇸 美国-13.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-15.21MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.79MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.59MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.08MB/s(Youtube:不良林)
-      - 波兰-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.40MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1004.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.88MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.98MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-20.38MB/s(Youtube:不良林)
       - 🇺🇸 美国-15.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-11.93MB/s(Youtube:不良林)
       - 🇺🇸 美国-13.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-15.21MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
